# ruster

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  test.yml
.github/workflows/: rust.yml
notes/: passing-rust-function-to-javascript.md
src/: adapters.rs  app.rs  core.rs  decorators.rs  errors.rs  executors.rs  factories.rs  finders.rs  main.rs  models.rs  readers.rs  utils.rs
tests/: integration_test.rs
