[package]
name = "ruster"
version = "0.1.0"
authors = ["Andy Rea <email@andrewrea.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.7.1"
yaml-rust = "0.4"
tempfile = "3.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
mockito = "0.26.0"
rusty_v8 = { path = "rusty_v8" }
